--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "",
-    "dev": "",
-    "build": "webpack --config ./build/webpack.prod.conf.js"
+    "dev": "webpack-dev-server --progress --config ./build/webpack.dev.conf.js",
+    "build": "node ./build/build.js"
   },
   "author": "qwc",
   "license": "ISC",
@@ -14,9 +14,32 @@
     "@babel/core": "^7.1.6",
     "@babel/preset-env": "^7.1.6",
     "@babel/preset-react": "^7.0.0",
+    "autoprefixer": "^9.4.1",
+    "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
+    "babel-plugin-import": "^1.11.0",
+    "chalk": "^2.4.1",
+    "clean-webpack-plugin": "^1.0.0",
+    "compression-webpack-plugin": "^2.0.0",
+    "css-loader": "^1.0.1",
+    "eslint": "^5.9.0",
+    "eslint-loader": "^2.1.1",
+    "eslint-plugin-react": "^7.11.1",
+    "file-loader": "^2.0.0",
+    "html-webpack-plugin": "^3.2.0",
+    "image-webpack-loader": "^4.6.0",
+    "mini-css-extract-plugin": "^0.4.5",
+    "ora": "^3.0.0",
+    "postcss": "^7.0.6",
+    "postcss-loader": "^3.0.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "stylus-loader": "^3.0.2",
+    "url-loader": "^1.1.2",
     "webpack": "^4.26.1",
+    "webpack-bundle-analyzer": "^3.0.3",
     "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10",
     "webpack-merge": "^4.1.4"
   },
   "dependencies": {
