--- a/.babelrc
+++ b/.babelrc
@@ -18,6 +18,11 @@
     "@babel/preset-react"
   ],
   "plugins": [
-    ["@babel/plugin-proposal-decorators",{"decoratorsBeforeExport":true}]
-  ] 
+    [
+      "@babel/plugin-proposal-decorators",
+      {
+        "decoratorsBeforeExport":false
+      }
+    ]
+  ]
 }
