--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.1.6",
-    "@babel/plugin-proposal-decorators": "^7.2.0",
+    "@babel/plugin-proposal-decorators": "^7.3.0",
+    "@babel/polyfill": "^7.2.5",
     "@babel/preset-env": "^7.1.6",
     "@babel/preset-react": "^7.0.0",
     "autoprefixer": "^9.4.1",
@@ -46,6 +47,7 @@
     "webpack-merge": "^4.1.4"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "koa": "^2.6.2",
     "koa-router": "^7.4.0",
     "marked": "^0.6.0",
@@ -53,7 +55,9 @@
     "pug": "^2.0.3",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   }
 }
