--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "axios": "^0.18.0",
     "koa": "^2.6.2",
     "koa-router": "^7.4.0",
+    "koa-static": "^5.0.0",
+    "koa-static-server": "^1.4.0",
     "marked": "^0.6.0",
     "mongoose": "^5.4.6",
     "pug": "^2.0.3",
