--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "BUILD YOUR PAGE",
   "main": "index.js",
   "scripts": {
-    "test":"",
-    "start":"npm run dev && npm run server",
-    "dev": "webpack-dev-server --progress --config ./build/webpack.dev.conf.js",
-    "build": "node ./build/build.js",
+    "test": "",
+    "dev": "webpack-dev-server --progress --config ./build/webpack.dev.js",
+    "buildC": "node ./build/build.js C",
+    "buildS": "node ./build/build.js S",
     "server": "node ./server"
   },
   "author": "qwc",
@@ -42,6 +42,7 @@
     "stylus-loader": "^3.0.2",
     "url-loader": "^1.1.2",
     "webpack": "^4.26.1",
+    "webpack-assets-manifest": "^3.1.1",
     "webpack-bundle-analyzer": "^3.0.3",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.11",
@@ -49,6 +50,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "isomorphic-fetch": "^2.2.1",
     "koa": "^2.6.2",
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
@@ -61,6 +63,7 @@
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "whatwg-fetch": "^3.0.0"
   }
 }
