--- a/package.json
+++ b/package.json
@@ -49,21 +49,12 @@
     "webpack-merge": "^4.1.4"
   },
   "dependencies": {
-    "axios": "^0.18.0",
     "isomorphic-fetch": "^2.2.1",
-    "koa": "^2.6.2",
-    "koa-router": "^7.4.0",
-    "koa-static": "^5.0.0",
-    "koa-static-server": "^1.4.0",
-    "marked": "^0.6.0",
-    "mongoose": "^5.4.6",
-    "pug": "^2.0.3",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0",
-    "whatwg-fetch": "^3.0.0"
+    "redux-thunk": "^2.3.0"
   }
 }
